fix: update lambda function to /v1/vision route

--- a/visao-computacional/serverless.yaml
+++ b/visao-computacional/serverless.yaml
@@ -52,6 +52,14 @@ resources:
                   Action:
                     - rekognition:DetectLabels
                   Resource: "*"
+          - PolicyName: ApiGatewayPostAccessPolicy
+            PolicyDocument:
+              Version: '2012-10-17'
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - execute-api:Invoke
+                  Resource: "*"
 
 functions:
   health:
