:bricks: ci: Modificaçao e deploy

--- a/visao-computacional/serverless.yml
+++ b/visao-computacional/serverless.yml
@@ -42,7 +42,7 @@ resources:
    MeuBucketdeImagens:
     Type: "AWS::S3::Bucket"
     Properties:
-      BucketName: bucket-images-sprint8
+      BucketName: serverless-sprint8-kelly
       PublicAccessBlockConfiguration: 
         BlockPublicAcls: false
       OwnershipControls: 
