:bricks: ci: Atualizacao do yaml e def para criacao da rota POST

--- a/visao-computacional/serverless.yml
+++ b/visao-computacional/serverless.yml
@@ -24,3 +24,15 @@ functions:
       - httpApi:
           path: /v2
           method: get
+  v1Label:
+    handler: handler.v1_Label
+    events:
+      - httpApi:
+          path: /v1/vision
+          method: post
+  v2MainEmotion:
+    handler: handler.v2_MainEmotion
+    events:
+      - httpApi:
+          path: /v2/vision
+          method: post
