refactor: politicas para s3

--- a/visao-computacional/serverless.yml
+++ b/visao-computacional/serverless.yml
@@ -57,6 +57,8 @@ resources:
               Action: sts:AssumeRole
         ManagedPolicyArns:
           - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+          - arn:aws:iam::aws:policy/AmazonS3FullAccess
+          - arn:aws:iam::aws:policy/AmazonRekognitionFullAccess
 
         Policies:
         - PolicyName: RekognitionAccessPolicy
