:package: refactor: atualização yml - remoção permissões S3 duplicadas

--- a/serverless.yml
+++ b/serverless.yml
@@ -12,47 +12,30 @@ provider:
         - "s3:GetObject"
       Resource: 
         - "*"
-
-resources:
-  Resources:
-    MyS3BucketPolicy:
-      Type: AWS::S3::BucketPolicy
-      Properties:
-        Bucket: mycatphotos-264727559380
-        PolicyDocument:
-          Version: "2012-10-17"
-          Statement:
-            - Effect: Allow
-              Principal:
-                Service: rekognition.amazonaws.com
-              Action:
-                - "s3:GetObject"
-                - "s3:GetObjectAcl"
-              Resource: "arn:aws:s3:::mycatphotos-264727559380/*"
                          
 functions:
   health:
     handler: src/handler.health
     events:
-      - http:
+      - httpApi:
           path: /
           method: get
   v1Description:
     handler: src/handler.v1_description
     events:
-      - http:
+      - httpApi:
           path: /v1
           method: get
   v2Description:
     handler: src/handler.v2_description
     events:
-      - http:
+      - httpApi:
           path: /v2
           method: get
   v1Vision:
     handler: src/handler.v1_vision
     events:
-      - http:
+      - httpApi:
           path: /v1/vision
           method: post
 
