:sparkles: feat: Adicionado codigo  de deteccao facial

--- a/serverless.yml
+++ b/serverless.yml
@@ -38,4 +38,10 @@ functions:
       - httpApi:
           path: /v1/vision
           method: post
+  v2Vision:
+    handler: src/handler.v2_vision
+    events:
+      - httpApi:
+          path: /v2/vision
+          method: post
 
