:sparkles: feat: incluida funcao extrai data criacao img dos metadados do S3

--- a/serverless.yml
+++ b/serverless.yml
@@ -39,9 +39,10 @@ functions:
           path: /v1/vision
           method: post
   v2Vision:
-    handler: src/vision.v2_vision
+    handler: src/vision2.v2_vision
     events:
       - httpApi:
           path: /v2/vision
           method: post
+
 
